<resources>

    <!-- COMMON -->

    <string name="app_name">VoIPApp</string>
    <string name="common_picture_intent_title">Select Picture</string>
    <string name="common_deleted_name">Deleted</string>
    <string name="common_unknown_name">Unknown</string>
    <string name="common_empty_message">Sorry. You have no records</string>


    <!-- ON BOARDING -->

    <string name="on_boarding_phone_validation_toolbar_title">Phone Validation</string>
    <string name="on_boarding_phone_validation_description">Please, insert your phone number to validate your account</string>
    <string name="on_boarding_phone_validation_button">Proceed</string>

    <!-- MAIN -->

    <string name="main_toolbar_title">@string/app_name</string>

    <!-- MAIN MENU -->

    <string name="main_menu_contacts">Contacts</string>
    <string name="main_menu_history">History</string>
    <string name="main_menu_settings">Settings</string>

    <!-- CONTACTS -->

    <string name="contacts_called_message">Called to %s</string>
    <string name="contacts_menu_add_contact">Add Contact</string>
    <string name="contacts_filter_all">All</string>
    <string name="contacts_filter_voip_app">VoIP APP</string>
    <string name="contacts_action_call">Call</string>
    <string name="contacts_action_edit">Edit</string>

    <!-- CONTACT DETAILS -->

    <string name="contact_details_menu_delete_contact">Delete Contact</string>
    <string name="contact_details_add_toolbar_title">New Contact</string>
    <string name="contact_details_edit_toolbar_title">Edit Contact</string>
    <string name="contact_details_add_photo_button">Add Photo</string>
    <string name="contact_details_name_hint">Name</string>
    <string name="contact_details_save_button">Save</string>

    <!-- DELETE CONFIRMATION -->

    <string name="delete_contact_confirmation_title">Are you sure you want to delete this contact?</string>
    <string name="delete_history_confirmation_title">Are you sure you want to delete the call history?</string>
    <string name="delete_all_data_confirmation_title">Are you sure you want to delete all VoIP App data?</string>
    <string name="delete_confirmation_yes">Yup</string>
    <string name="delete_confirmation_no">Nop</string>

    <!-- PHONE VALIDATION -->

    <string name="phone_validation_country_hint">Country</string>
    <string name="phone_validation_phone_hint">Phone Number</string>

    <!-- SETTINGS -->

    <string name="settings_clear_history">Clear Call History</string>
    <string name="settings_clear_data">Clear All Data</string>

</resources>
