<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_contacts"
        android:enabled="true"
        android:icon="@drawable/ic_contacts"
        android:title="@string/main_menu_contacts"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/main_menu_history"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/main_menu_settings"
        app:showAsAction="ifRoom"/>

</menu>