<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="image"
            type="android.net.Uri"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            style="@style/AppTheme.Toolbar"
            android:id="@+id/tlbCreateContactToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/contact_details_item_margin"
                    app:elevation="@dimen/contact_container_elevation">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/imbCreateContactPhoto"
                            android:layout_width="@dimen/contact_details_avatar_size"
                            android:layout_height="@dimen/contact_details_avatar_size"
                            android:layout_margin="@dimen/contact_details_avatar_margin"
                            android:scaleType="fitXY"
                            android:background="?android:attr/selectableItemBackground"
                            bind:placeholder="@{@drawable/ic_upload}"
                            bind:circleImage="@{image}"/>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <EditText
                                style="@style/AppTheme.Text.SubtitleOne"
                                android:id="@+id/edtCreateContactName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/contact_details_item_margin"
                                android:layout_marginEnd="@dimen/contact_details_item_margin"
                                android:hint="@string/contact_details_name_hint"
                                android:inputType="textPersonName"
                                android:gravity="center"
                                android:lines="1"
                                android:imeOptions="actionDone"/>

                            <TextView
                                style="@style/AppTheme.Text.SubtitleOne"
                                android:id="@+id/txtCreateContactPhoneNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/contact_details_item_margin"
                                android:layout_marginEnd="@dimen/contact_details_item_margin"
                                android:layout_marginBottom="@dimen/contact_details_item_margin"
                                android:hint="@string/phone_validation_phone_hint"
                                android:lines="1"/>

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <Button
                    style="@style/AppTheme.Text.Button.Light"
                    android:id="@+id/btnCreateContactSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/contact_details_item_margin"
                    android:text="@string/contact_details_save_button"
                    android:background="@drawable/selector_button"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>